--- a/views/communities.html
+++ b/views/communities.html
@@ -3,7 +3,7 @@
   <div class="well" ng-repeat="comm in communities">
     <h4> {{comm.title}}</h4>
     <p> {{comm.abstract}}</p>
-    <a href="{{comm.url}}">{{comm.url}}</a>
+    <a href="{{comm.url}}">{{comm.urltext}}</a>
     <hr/>
   </div>
 </div>
