--- a/views/home.html
+++ b/views/home.html
@@ -9,11 +9,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="item active">
-      <!-- <img data-src="holder.js/900x500/auto/#777:#7a7a7a/text:First slide" alt="First slide"> -->
+      <center>
+        <img src="img/gerb_sankt-peterburga.png"/>
+      </center>
       <div class="container">
         <div class="carousel-caption">
           <h1>Piter United</h1>
-          <p>Сообщества Питера объеденяйтесь</p>
+          <p>IT Сообщества Питера объеденяйтесь</p>
           <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
         </div>
       </div>
@@ -42,3 +44,28 @@
   <a class="left carousel-control" href="" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
   <a class="right carousel-control" href="" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
 </div><!-- /.carousel -->
+
+<div class="container content">
+  <h1>Piter United (IT)</h1>
+  <p>
+  В нашем городе существует много профессиональных IT сообществ. Некоторые из них представлены в социальных сетях, некоторые организуются и обмениваются информацией иными способами, но все эти профессиональные сообщества объединяет желание IT специалистов профессионально развиваться за счет обмена опытом и знаниями.
+  </p>
+
+  <p>
+  Появилась идея подружиться всем профессиональным IT сообществам нашего города,  узнать и знать друг о друге и поспособствовать развитию.
+  </p>
+
+  <p>
+  Это объединение позволит всем нам, IT специалистам,
+  <ul>
+    <li> узнавать и участвовать в жизни интересных нам сообществ (посящая встречи, обмениваясь интересным контентом, расширяя кругозор)
+    </li>
+    <li> организовывать кросс специализированные мероприятия и собирать интересную и активную аудиторию IT специалистов для личного развития и обмена опытом
+    </li>
+  </ul>
+  </p>
+
+  <p>
+  Всем кому интересна эта идея (активистам), готовым ее поддержать и поучаствовать, приглашаем сюда ссылка на Piter United.
+  </p>
+</div>
