--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,10 +1,25 @@
 body {
   margin: 0;
   padding: 0px;
+  font-size: 16px;
+  background: #444;
+  padding-top: 40px;
+  color: #222;
+}
+/* Customize container */
+@media (min-width: 880px) {
+  .container {
+    max-width: 880px;
+  }
+}
+.container-narrow > hr {
+  margin: 30px 0;
 }
 .content {
-  padding: 40px;
-  padding-top: 100px;
+  padding: 30px;
+  border: 1px solid #ddd;
+  background: white;
+  box-shadow: 0px 4px 30px black;
 }
 .community {
 }
