--- a/views/home.html
+++ b/views/home.html
@@ -1,52 +1,51 @@
 <!-- Carousel
 ================================================== -->
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="item active">
-      <center>
-        <img src="img/gerb_sankt-peterburga.png"/>
-      </center>
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>Piter United</h1>
-          <p>IT Сообщества Питера объеденяйтесь</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-        </div>
-      </div>
-    </div>
-    <div class="item">
-      <img data-src="holder.js/900x500/auto/#666:#6a6a6a/text:Second slide" alt="Second slide">
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>Another example headline.</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-        </div>
-      </div>
-    </div>
-    <div class="item">
-      <img data-src="holder.js/900x500/auto/#555:#5a5a5a/text:Third slide" alt="Third slide">
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>One more for good measure.</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <a class="left carousel-control" href="" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-  <a class="right carousel-control" href="" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-</div><!-- /.carousel -->
+<!-- <div id="myCarousel" class="carousel slide" data-ride="carousel"> -->
+<!--   <1!-- Indicators --1> -->
+<!--   <ol class="carousel-indicators"> -->
+<!--     <li data-target="#myCarousel" data-slide-to="0" class="active"></li> -->
+<!--     <li data-target="#myCarousel" data-slide-to="1"></li> -->
+<!--     <li data-target="#myCarousel" data-slide-to="2"></li> -->
+<!--   </ol> -->
+<!--   <div class="carousel-inner"> -->
+<!--     <div class="item active"> -->
+<!--       <center> -->
+<!--         <img src="img/gerb_sankt-peterburga.png"/> -->
+<!--       </center> -->
+<!--       <div class="container"> -->
+<!--         <div class="carousel-caption"> -->
+<!--           <h1>Piter United</h1> -->
+<!--           <p>IT Сообщества Питера объеденяйтесь</p> -->
+<!--           <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p> -->
+<!--         </div> -->
+<!--       </div> -->
+<!--     </div> -->
+<!--     <div class="item"> -->
+<!--       <div class="container"> -->
+<!--         <div class="carousel-caption"> -->
+<!--           <h1>Another example headline.</h1> -->
+<!--           <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> -->
+<!--           <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
+<!--         </div> -->
+<!--       </div> -->
+<!--     </div> -->
+<!--     <div class="item"> -->
+<!--       <div class="container"> -->
+<!--         <div class="carousel-caption"> -->
+<!--           <h1>One more for good measure.</h1> -->
+<!--           <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> -->
+<!--           <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p> -->
+<!--         </div> -->
+<!--       </div> -->
+<!--     </div> -->
+<!--   </div> -->
+<!--   <a class="left carousel-control" href="" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> -->
+<!--   <a class="right carousel-control" href="" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a> -->
+<!-- </div><1!-- /.carousel --1> -->
 
 <div class="container content">
   <h1>Piter United (IT)</h1>
+  <hr/>
   <p>
   В нашем городе существует много профессиональных IT сообществ. Некоторые из них представлены в социальных сетях, некоторые организуются и обмениваются информацией иными способами, но все эти профессиональные сообщества объединяет желание IT специалистов профессионально развиваться за счет обмена опытом и знаниями.
   </p>
@@ -68,4 +67,5 @@
   <p>
   Всем кому интересна эта идея (активистам), готовым ее поддержать и поучаствовать, приглашаем сюда ссылка на Piter United.
   </p>
+ <img src="img/gerb_sankt-peterburga.png" style="width:100%;"/>
 </div>
