--- a/views/communities.html
+++ b/views/communities.html
@@ -1,11 +1,15 @@
 <div class="container content">
-  <h1><input placeholder="Сообщества" ng-model="search" style="border: 1px solid #ddd;"/></h1>
-  <div class="well community" ng-repeat="comm in communities | csearch:search">
+  <h1>
+    <input placeholder="Сообщества" ng-model="search" style="border: 1px solid #ddd;"/>
+    <a ng-show="user" href="#/communities/new" class="btn btn-primary">Добавить свое</a>
+  </h1>
+  <div class="well community" ng-repeat="(id,comm) in communities | csearch:search">
     <img src="{{comm.logo}}" alt="ups"/>
     <a href="{{comm.url}}">
       <h3> {{comm.title}}</h3>
     </a>
     <p> {{comm.abstract}}</p>
+    <a ng-show="user" href="#/communities/edit/{{id}}" ng-click="edit(id)">edit</a>
     <div class="clear"></div>
   </div>
 </div>
