--- a/app/main/views/navigation/template.html
+++ b/app/main/views/navigation/template.html
@@ -31,7 +31,7 @@
                     <a ng-href="#" class="dropdown-toggle" data-toggle="dropdown">{{auth.user.profile.name}} <b class="caret"></b>&nbsp;</a>
                     <ul class="dropdown-menu">
                         <li><a ng-href="#/user/{{auth.user.id}}">Профиль</a></li>
-                        <li ng-controller="UserLogoutCtrl"><a href="" pu-logout>Выход</a></li>
+                        <li><a href="" pu-logout>Выход</a></li>
                     </ul>
                 </li>
             </ul>
