--- a/app/calendar/views/page/style.css
+++ b/app/calendar/views/page/style.css
@@ -1,40 +1,26 @@
-/*body {*/
-  /*margin: 0;*/
-  /*padding: 0px;*/
-  /*font-size: 16px;*/
-  /*background: #444;*/
-  /*padding-top: 40px;*/
-  /*color: #222;*/
-/*}*/
-/* Customize container */
-/*@media (min-width: 880px) {*/
-  /*.container {*/
-    /*max-width: 880px;*/
-  /*}*/
-/*}*/
-/*.navbar-nav {*/
-  /*float: none;*/
-/*}*/
-/*.container-narrow > hr {*/
-  /*margin: 30px 0;*/
-/*}*/
-/*.content {*/
-  /*padding: 30px;*/
-  /*border: 1px solid #ddd;*/
-  /*background: white;*/
-  /*box-shadow: 0px 4px 30px black;*/
-/*}*/
-/*.community {*/
-/*}*/
-/*.community img{*/
-  /*width: 100px;*/
-  /*float: right;*/
-  /*margin: 4px;*/
-  /*background: white;*/
-  /*padding: 4px;*/
-  /*border-radius: 100%;*/
-  /*border: 1px solid #bbb;*/
-/*}*/
-/*.clear {*/
-  /*clear: both;*/
-/*}*/
+.calendar-title {
+    width: 300px;
+    height: 50px;
+}
+.calendar-title-text {
+    text-align: center;
+}
+.calendar-title-arrow {
+    font-size: 180%;
+}
+.calendar-month-week-day {
+    width: 14.28%;
+    height: 100px;
+}
+.calendar-month-week-day_title {
+    height: auto;
+}
+.calendar-month-week-day_disable {
+    color: #cccccc;
+}
+.calendar-month-week-day_today {
+    border: solid 2px #cc0000 !important
+}
+.calendar-month-week-day-events {
+    font-size: 90%;
+}
