--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -19,7 +19,6 @@
     <!-- Share via social -->
     <link rel="canonical" href="http://piter-united.ru" />
     <script type="text/javascript" src="https://apis.google.com/js/platform.js"></script>
-    <script type="text/javascript" src="http://vkontakte.ru/js/api/share.js?9" charset="windows-1251"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,11 +35,11 @@
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
             </button>
-            <a class="navbar-brand" href="/"></a>
+            <a class="navbar-brand" href="/p_index.html"></a>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/">Перейти на портал Piter United</a></li>
+              <li><a href="/p_index.html">Перейти на портал Piter United</a></li>
             </ul>
           </div>
         </div>
