--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{page.title}}</title>
     <meta name="image" content="img/piterunited.png">
+    <meta property="og:image" content="img/piterunited.ru">
     <meta name="description" content="IT Global Meetup. Все ИТ-сообщества Санкт-Петербурга 30 мая в Музее Связи, ул. Почтамтская 15. Подробности тут: piter-united.ru">
 
     <!-- Bootstrap -->
