--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{page.title}}</title>
-    <meta name="image" content="img/piterunited.png">
-    <meta property="og:image" content="img/piterunited.ru">
-    <meta name="description" content="IT Global Meetup. Все ИТ-сообщества Санкт-Петербурга 30 мая в Музее Связи, ул. Почтамтская 15. Подробности тут: piter-united.ru">
+    <meta property="og:title" content="Piter United" /> 
+    <meta property="og:image" content="/img/piterunited.ru" /> 
+    <meta property="og:description" content="Некоммерческое объединение ИТ-сообществ Санкт-Петербурга. Мы формируем и развиваем профессионально-образовательную инфраструктуру на базе сообществ в Санкт-Петербурге. Присоединяйтесь!" /> 
+    <meta property="og:url" content="http://piter-united.ru">
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
