--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{page.title}}</title>
-    <meta name="image" content="img/piterunited.png">
-    <meta property="og:image" content="img/piterunited.ru">
-    <meta name="description" content="IT Global Meetup. Все ИТ-сообщества Санкт-Петербурга 30 мая в Музее Связи, ул. Почтамтская 15. Подробности тут: piter-united.ru">
+    <meta property="og:title" content="IT Global Meetup" /> 
+    <meta property="og:image" content="/img/piterunited.ru" /> 
+    <meta property="og:description" content="IT Global Meetup. Все ИТ-сообщества Санкт-Петербурга соберутся 30 мая в Музее связи, ул. Почтамтская 15. Мы ждем вас ИТ-специалисты неравнодушные к профессиональному развитию." /> 
+    <meta property="og:url" content="http://piter-united.ru">
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
