--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{page.title}}</title>
+    <meta content="/images/google_favicon_128.png" itemprop="image">
     <meta property="og:title" content="Piter United" /> 
     <meta property="og:image" content="/img/piterunited.ru" /> 
     <meta property="og:description" content="Некоммерческое объединение ИТ-сообществ Санкт-Петербурга. Мы формируем и развиваем профессионально-образовательную инфраструктуру на базе сообществ в Санкт-Петербурге. Присоединяйтесь!" /> 
