--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -9,13 +9,13 @@
     <meta name="description" content="IT Global Meetup. Все ИТ-сообщества Санкт-Петербурга соберутся 30 мая в Музее связи, ул. Почтамтская 15. Мы ждем вас ИТ-специалисты неравнодушные к профессиональному развитию." />
 
     <meta property="og:title" content="IT Global Meetup" /> 
-    <meta property="og:image" content="/img/piterunited.ru" /> 
+    <meta property="og:image" content="/img/piterunited.png" /> 
     <meta property="og:description" content="IT Global Meetup. Все ИТ-сообщества Санкт-Петербурга соберутся 30 мая в Музее связи, ул. Почтамтская 15. Мы ждем вас ИТ-специалисты неравнодушные к профессиональному развитию." /> 
     <meta property="og:url" content="http://piter-united.ru">
 
     <meta name="twitter:title" content="IT Global Meetup" />
     <meta name="twitter:description" content="IT Global Meetup. Все ИТ-сообщества Санкт-Петербурга соберутся 30 мая в Музее связи, ул. Почтамтская 15. Мы ждем вас ИТ-специалисты неравнодушные к профессиональному развитию." />
-    <meta name="twitter:image" content="http://piter-united.ru" />
+    <meta name="twitter:image" content="/img/piterunited.png" />
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
