--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,15 @@
 
     <meta name="description" content="Некоммерческое объединение ИТ-сообществ Санкт-Петербурга. Мы формируем и развиваем профессионально-образовательную инфраструктуру на базе сообществ в Санкт-Петербурге. Присоединяйтесь!" />
 
+
     <meta property="og:title" content="Piter United" /> 
-    <meta property="og:image" content="/img/piterunited.ru" /> 
+    <meta property="og:image" content="/img/piterunited.png" /> 
     <meta property="og:description" content="Некоммерческое объединение ИТ-сообществ Санкт-Петербурга. Мы формируем и развиваем профессионально-образовательную инфраструктуру на базе сообществ в Санкт-Петербурге. Присоединяйтесь!" /> 
     <meta property="og:url" content="http://piter-united.ru">
+
+    <meta name="twitter:title" content="Piter United" />
+    <meta name="twitter:description" content="Некоммерческое объединение ИТ-сообществ Санкт-Петербурга. Мы формируем и развиваем профессионально-образовательную инфраструктуру на базе сообществ в Санкт-Петербурге. Присоединяйтесь!" />
+    <meta name="twitter:image" content="/img/piterunited.png" />
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
