--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -10,7 +10,7 @@
 
     <meta property="og:title" content="IT Global Meetup" />
     <meta property="og:type" content="website" /> 
-    <meta property="og:image" content="/img/piterunited.png" />
+    <meta property="og:image" content="http://piter-united.ru/img/piterunited.png" />
     <meta property="og:image:type" content="image/png" /> 
     <meta property="og:description" content="IT Global Meetup. Все ИТ-сообщества Санкт-Петербурга соберутся 30 мая в Музее связи, ул. Почтамтская 15. Мы ждем вас ИТ-специалисты неравнодушные к профессиональному развитию." /> 
     <meta property="og:url" content="http://piter-united.ru">
