--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>IT Global Meetup</title>
     
-    <meta name="description" content="IT Global Meetup. Все ИТ-сообщества Санкт-Петербурга соберутся 30 мая в Музее связи, ул. Почтамтская 15. Мы ждем вас ИТ-специалисты неравнодушные к профессиональному развитию." />
+    <meta name="description" content="Все ИТ-сообщества Санкт-Петербурга соберутся 30 мая в Музее связи, ул. Почтамтская 15. Мы ждем вас ИТ-специалисты неравнодушные к профессиональному развитию." />
 
     <meta property="og:title" content="IT Global Meetup" />
     <meta property="og:type" content="website" /> 
