--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -52,7 +52,7 @@
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/p_index.html">Перейти на портал Piter United</a></li>
+              <li><a href="/p_index.html" id="pulink">Перейти на портал Piter United</a></li>
             </ul>
           </div>
         </div>
@@ -66,6 +66,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
