--- a/_layouts/landing_new.html
+++ b/_layouts/landing_new.html
@@ -1,32 +1,37 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Piter United</title>
+    <title>IT Global Meetup</title>
+    
+    <meta name="description" content="Все ИТ-сообщества Санкт-Петербурга соберутся 30 мая в Музее связи, ул. Почтамтская 15. Мы ждем вас ИТ-специалисты неравнодушные к профессиональному развитию." />
 
-    <meta name="description" content="Некоммерческое объединение ИТ-сообществ Санкт-Петербурга. Мы формируем и развиваем профессионально-образовательную инфраструктуру на базе сообществ в Санкт-Петербурге. Присоединяйтесь!" />
-
-
-    <meta property="og:title" content="Piter United" /> 
+    <meta property="og:title" content="IT Global Meetup" />
     <meta property="og:type" content="website" /> 
     <meta property="og:image" content="http://piter-united.ru/img/pu_logo.png" />
     <meta property="og:image:type" content="image/png" /> 
-    <meta property="og:description" content="Некоммерческое объединение ИТ-сообществ Санкт-Петербурга. Мы формируем и развиваем профессионально-образовательную инфраструктуру на базе сообществ в Санкт-Петербурге. Присоединяйтесь!" /> 
+    <meta property="og:description" content="IT Global Meetup. Все ИТ-сообщества Санкт-Петербурга соберутся 30 мая в Музее связи, ул. Почтамтская 15. Мы ждем вас ИТ-специалисты неравнодушные к профессиональному развитию." /> 
     <meta property="og:url" content="http://piter-united.ru">
 
-    <meta name="twitter:title" content="Piter United" />
-    <meta name="twitter:description" content="Некоммерческое объединение ИТ-сообществ Санкт-Петербурга. Мы формируем и развиваем профессионально-образовательную инфраструктуру на базе сообществ в Санкт-Петербурге. Присоединяйтесь!" />
+    <meta name="twitter:title" content="IT Global Meetup" />
+    <meta name="twitter:description" content="IT Global Meetup. Все ИТ-сообщества Санкт-Петербурга соберутся 30 мая в Музее связи, ул. Почтамтская 15. Мы ждем вас ИТ-специалисты неравнодушные к профессиональному развитию." />
     <meta name="twitter:image" content="/img/piterunited.png" />
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="js/bootstrap.min.js" rel="stylesheet">
+
+    <!-- CSS for Landing Page -->
+    <link href="css/itgm.css" rel="stylesheet">
+    
 
     <!-- PT Sans font -->
     <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+
+    <!-- Share via social -->
+    <link rel="canonical" href="http://piter-united.ru" />
+    <script type="text/javascript" src="https://apis.google.com/js/platform.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -34,8 +39,8 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
 
+  </head>
   <body>
     <div class="container-fluid">
       <nav class="navbar navbar-default navbar-static-top" role="navigation">
@@ -43,23 +48,22 @@
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
             </button>
-            <a class="navbar-brand" href="/">Piter United</a>
+            <a class="navbar-brand" href="/p_index.html"></a>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <!--
-              <li><a href="/">IT Global Meetups</a></li>
-            -->
+              <li><a href="/main.html" id="pulink">Перейти на портал Piter United</a></li>
             </ul>
           </div>
         </div>
-        </nav>
+      </nav>
 
-      <head>
-   <!-- HTML meta refresh URL redirection -->
-   <meta http-equiv="refresh"
-   content="0; url= /main.html">
-</head>
+      {{ content }}
+
+      <div class="footer">
+        <h3 id="footer">Контакты</h3>
+        <a href="mailto:piterunited@gmail.com" id="footer">piterunited@gmail.com</a>
+      </div>
     
     </div>
 
@@ -67,7 +71,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-
+    
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -76,6 +80,6 @@
       ga('create', 'UA-49828340-2', 'piter-united.ru');
       ga('send', 'pageview');
     </script>
-    
+
   </body>
 </html>
