--- a/_layouts/itgm.html
+++ b/_layouts/itgm.html
@@ -9,7 +9,7 @@
 
 	    <meta property="og:title" content="IT Global Meetup #4" />
 	    <meta property="og:type" content="website" /> 
-	    <meta property="og:image" content="http://piter-united.ru/itgm/img/afa.png" />
+	    <meta property="og:image" content="http://piter-united.ru/itgm/img/itgm_logo.png" />
 	    <meta property="og:image:type" content="image/png" /> 
 	    <meta property="og:description" content= "IT Global Meetup #4. СПб, 28 февраля 2015. Слет ИТ-сообществ Санкт-Петербурга."/> 
 	    <meta property="og:url" content="http://piter-united.ru/itgm/itgm.html">
