--- a/_layouts/itgm.html
+++ b/_layouts/itgm.html
@@ -42,6 +42,7 @@
         <script src="js/twitterfetcher.min.js"></script>
         <script src="js/jquery.prettySocial.min.js"></script>
         <script src="js/scripts.js"></script>
+        <script type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script>
 
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
