--- a/_layouts/itgm.html
+++ b/_layouts/itgm.html
@@ -15,8 +15,8 @@
 	    <meta property="og:url" content="http://piter-united.ru/itgm/itgm.html">
 
 	    <meta name="twitter:title" content="IT Global Meetup #4" />
-	    <meta name="twitter:description" content="IT Global Meetup #4. СПб, 27 февраля 2015. Слет ИТ-сообществ Санкт-Петербурга." />
-	    <meta name="twitter:image" content="http://piter-united.ru/itgm/img/afa.png" />
+	    <meta name="twitter:description" content="IT Global Meetup #4. СПб, 27 февраля 2015. Слет ИТ-сообществ Санкт-Петербурга."/>
+	    <meta name="twitter:image" content="http://piter-united.ru/itgm/img/itgm_logo.png" />
 
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/theme-lava.css" rel="stylesheet" type="text/css" media="all"/>
@@ -42,7 +42,6 @@
         <script src="js/twitterfetcher.min.js"></script>
         <script src="js/jquery.prettySocial.min.js"></script>
         <script src="js/scripts.js"></script>
-        <script type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script>
 
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
