--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -50,7 +50,7 @@
         {{ content }}
 
         <!-- FOOTER -->        
-        <footer id="footer">
+<!--        <footer id="footer">
             <div class="container">
                 <div class="row">
                     
@@ -67,7 +67,7 @@
                     
                     <div class="col-lg-3 col-md-3 col-sm-6">
                         <h4 class="uppercase">FAQ</h4>
-                        <!--<p class="small">Etiam nec porta risus. Aliquam id odio orci. Duis accumsan feugiat feugiat.</p>-->
+                        &lt;!&ndash;<p class="small">Etiam nec porta risus. Aliquam id odio orci. Duis accumsan feugiat feugiat.</p>&ndash;&gt;
                         
                         <dl class="faqs">
                             <dt>Is this the first question?</dt>
@@ -98,13 +98,13 @@
                         </div>
                         
                         <p class="small">Pellentesque laoreet leo ut suscipit feugiat. Sed ultricies convallis nunc quis malesuada.</p>
-                        
+
                     </div>
                 
                 </div>
             </div>
         </footer>
-        
+        -->
         <!-- SUBFOOTER -->
         <div class="subfooter">
             <div class="container">
