(ITGM#7): закомментировал SUBFOOTER (нужно будет с ним отдельно разбираться)

--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -49,8 +49,10 @@
 
         {{ content }}
 
-        <!-- FOOTER -->        
-<!--        <footer id="footer">
+        <!-- FOOTER -->
+        <!--TODO: раскомментировать и актуализировать FOOTER!-->
+<!--
+        <footer id="footer">
             <div class="container">
                 <div class="row">
                     
@@ -104,8 +106,11 @@
                 </div>
             </div>
         </footer>
-        -->
+-->
+
         <!-- SUBFOOTER -->
+        <!--TODO: раскомментировать и актуализировать SUBFOOTER!-->
+<!--
         <div class="subfooter">
             <div class="container">
                 <div class="row">
@@ -123,9 +128,9 @@
                 </div>
             </div>
         </div> 
-        
 
-        
+-->
+
         <script src="js/jquery-1.11.1.min.js"></script>
         <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
         <script src="js/jquery.themepunch.tools.min.js"></script>
