--- a/_layouts/itgm.html
+++ b/_layouts/itgm.html
@@ -52,7 +52,7 @@
         <script src="/js/google-analytics.pageview.piter-united.ru.js"></script>
 
         <!-- Yandex.Metrika counter -->
-        <script type="text/javascript" src="js/yandex-metrika.piter-united.ru.js"></script>
+        <script type="text/javascript" src="/js/yandex-metrika.piter-united.ru.js"></script>
         <noscript><div><img src="//mc.yandex.ru/watch/26968695" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
         <!-- Yandex.Metrika counter -->
 
