(ITGM#7): Добавил использование Yandex.Metrika на страницах, где только GOOGLE ANALYTICS был. + description в itgm7.html поправил

--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -3,18 +3,15 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-	<head>
-    	
-        <title>IT Global Meetup #7</title>
-        
+    <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="Eventr - One Page Event Template">
-        <meta name="author" content="themecube">
+        <title>IT Global Meetup #7</title>
         
         <!-- viewport settings -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-     
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="IT Global Meetup. СПб, 02 апреля 2016 в Club House. Слет ИТ-сообществ Санкт-Петербурга.">
+        <meta name="author" content="IT Global Meetup">
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
@@ -35,7 +32,6 @@
         <link rel="stylesheet" href="css/revolution-extralayers.css">
         
         <link rel="stylesheet" href="css/main.css">
-		        
 
         <!-- Font -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
@@ -150,5 +146,11 @@
 
         <!-- GOOGLE ANALYTICS -->
         <script src="/js/google-analytics.pageview.piter-united.ru.js"></script>
+
+        <!-- Yandex.Metrika counter -->
+        <script type="text/javascript" src="/js/yandex-metrika.piter-united.ru.js"></script>
+        <noscript><div><img src="//mc.yandex.ru/watch/26968695" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+        <!-- Yandex.Metrika counter -->
+
     </body>
 </html>
