--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -128,7 +128,7 @@
 -->
 
         <script src="js/jquery-1.11.1.min.js"></script>
-        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
         <script src="js/jquery.themepunch.tools.min.js"></script>
         <script src="js/jquery.themepunch.revolution.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
