--- a/itgm7/css/main.css
+++ b/itgm7/css/main.css
@@ -310,7 +310,7 @@ a {
   	margin-bottom: 5px;
 }
 
-.speaker .company {
+.speaker .community {
 	color:#999999;
 	font-family:'Open sans';
 	font-size:10px;
