--- a/itgm7/css/main.css
+++ b/itgm7/css/main.css
@@ -275,9 +275,9 @@ a {
 }
 
 
-/* SPEAKER */
+/* communities */
 
-#speakers {
+#communities {
 	background:#f5f5f5;
 	border-top:1px solid #f0f0f0;
 	padding:70px 0 90px 0;
@@ -319,7 +319,7 @@ a {
 	margin:0;
 }
 
-#speakers .owl-buttons {
+#communities .owl-buttons {
 	position: absolute;
 	font-size: 10px;
 	right: 0;
