(ITGM#7) настройки карты поправил (отображение переулков вернул, отображение "сообщить об ошибке убрал")

--- a/itgm7/css/main.css
+++ b/itgm7/css/main.css
@@ -1001,9 +1001,9 @@ a {
 
 /* контролы на карте разрешил */
 /*.gmnoprint,*/
-/*.gm-style-cc {*/
-	/*display:none;*/
-/*}*/
+.gm-style-cc {
+	display:none;
+}
 
 footer {
 	color:#b0b0b0;
