--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -15,7 +15,8 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
-        
+        <!--<link rel="stylesheet" type="text/css" href="dist/semantic.min.css">-->
+
         <link rel="stylesheet" href="css/pe-icon-7-stroke.css">
         <link rel="stylesheet" href="css/helper.css">
         <link rel="stylesheet" href="css/animate.min.css">
@@ -30,7 +31,7 @@
         <link rel="stylesheet" href="css/owl.transitions.css">
         <link rel="stylesheet" href="css/revolution.css">
         <link rel="stylesheet" href="css/revolution-extralayers.css">
-        
+
         <link rel="stylesheet" href="css/main.css">
 
         <!-- Font -->
@@ -127,6 +128,9 @@
 
 -->
 
+
+
+
         <script src="js/jquery-1.11.1.min.js"></script>
         <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
         <script src="js/jquery.themepunch.tools.min.js"></script>
@@ -141,8 +145,10 @@
         <script src="js/jquery.counterup.min.js"></script>
         <script src="js/owl.carousel.min.js"></script>
         <script src="js/retina.js"></script>
-        
+
+        <!--<script src="dist/semantic.min.js"></script>-->
         <script src="js/main.js"></script>
+        <script type="text/javascript" src="http://yastatic.net/share/share.js" charset="utf-8"></script>
 
         <!-- GOOGLE ANALYTICS -->
         <script src="/js/google-analytics.pageview.piter-united.ru.js"></script>
