--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -15,7 +15,7 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
-        <!--<link rel="stylesheet" type="text/css" href="dist/semantic.min.css">-->
+        <link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
 
         <link rel="stylesheet" href="css/pe-icon-7-stroke.css">
         <link rel="stylesheet" href="css/helper.css">
@@ -130,6 +130,7 @@
 
 
 
+        <script src="dist/semantic.min.js"></script>
 
         <script src="js/jquery-1.11.1.min.js"></script>
         <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
@@ -146,7 +147,6 @@
         <script src="js/owl.carousel.min.js"></script>
         <script src="js/retina.js"></script>
 
-        <!--<script src="dist/semantic.min.js"></script>-->
         <script src="js/main.js"></script>
         <script type="text/javascript" src="http://yastatic.net/share/share.js" charset="utf-8"></script>
 
