(ITGM#7) подключил стили semantic.min.css 2

--- a/_layouts/itgm7.html
+++ b/_layouts/itgm7.html
@@ -15,7 +15,7 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
+        <link rel="stylesheet" type="text/css" href="/itgm/dist/semantic.min.css">
 
         <link rel="stylesheet" href="css/pe-icon-7-stroke.css">
         <link rel="stylesheet" href="css/helper.css">
